Update for left oriented text, fix overflow text, fix username on wrong side

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -6,6 +6,7 @@
   font-family: "Source Sans 3", sans-serif;
   padding-bottom: 20px; /* Add spacing between tweets */
 }
+
 .tweet {
   border: 3px solid black;
   width: 100%;
@@ -14,9 +15,11 @@
   position: relative;
   transition: box-shadow 0.3s;
 }
+
 .tweet:hover {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); /* Add a box-shadow when hovering */
 }
+
 .tweet-header {
   display: flex;
   flex-direction: row;
@@ -24,6 +27,10 @@
   margin-bottom: 10px;
   font-size: 20px;
   align-items: center;
+}
+
+.tweet-paragraph {
+  overflow-wrap: anywhere;
 }
 
 .tweet .img {
@@ -34,7 +41,6 @@
   height: auto;
   width: auto;
 }
-
 .user-info {
   display: flex;
   justify-content: space-between;
@@ -63,7 +69,7 @@
 .tweet-content {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: left;
   font-size: 1.5em;
   padding: 10px;
 }
